# crscardellino.github.io

./: .gitignore  404.html  CNAME  Gemfile  LICENSE  README.md  Rakefile  _config.yml  about.html  about.md  archive.md  atom.xml  blog.html  contact.html  duties.py  index.html  pelicanconf.py  publications.md  publishconf.py  pydata-tutorial.md  pyproject.toml  rio-tutorial.md  robots.txt  sitemap.xml  social.html  tech.html  work.md
SBWCE/: _config.yml  cite.bib  feed.xml  index.html  index.md
_harp/: LICENSE.txt  README.md
_includes/: footer.html  head.html  header.html  mathjax.html
_layouts/: month-archive.html  page.html  post.html  tag-archive.html  year-archive.html
_pages/: about.md  archive.md  from-python-to-scala.md  publications.md  work.md
_posts/: 2014-06-11-hello-world.markdown  2014-07-28-from-python-to-scala-i-the-basics.markdown  2014-07-30-from-python-to-scala-ii-types.markdown  2014-08-05-from-python-to-scala-iii-lists.markdown  2014-08-07-from-python-to-scala-iv-arrays-and-listbuffers.markdown  2014-08-11-why-did-i-choose-scala.markdown  2014-08-20-from-python-to-scala-v-control-flow-tools.markdown  2014-08-23-from-python-to-scala-vi-functions.markdown  2014-08-26-from-python-to-scala-vii-functions-ii.markdown  2016-02-06-spanish-billion-words-corpus-and-embeddings.markdown  2018-12-04-python-with-ggplot.markdown  2021-06-24-charlando-con-maquinas.markdown  2021-07-01-desmitificando-pln.markdown  2021-10-28-embeddings-101.markdown  2022-03-26-aprendizaje-automatico-sin-informatica.markdown  2022-03-27-aprendizaje-automatico-sin-informatica.markdown  2022-03-27-aprendizaje-automatico-sin-programacion.markdown  2022-03-28-aprendizaje-automatico-sin-programacion.markdown  2022-09-01-framework-mlflow-hydra.markdown  2023-04-04-comandos-bash.markdown  2023-04-04-visidata.markdown  (+3 more)
(+192 files in other folders)
