[project]
name = "crscardellino-github-page"
version = "0.1.0"
description = "Cristian Cardellino Blog"
readme = "README.md"
authors = [
    { name = "Cristian Cardellino", email = "crscardellino@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duty>=1.9.0",
    "pelican[markdown]>=4.12.0",
]
