[project]
name = "crscardellino-github-page"
version = "0.1.0"
description = "Cristian Cardellino Blog"
readme = "README.md"
authors = [
    { name = "Cristian Cardellino", email = "crscardellino@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duty>=1.9.0",
    "minchin-pelican-plugins-summary>=1.3.1",
    "pelican-sitemap>=1.2.2",
    "pelican-yaml-metadata>=2.1.2",
    "pelican[markdown]>=4.12.0",
]
