[project]
name = "crscardellino-github-page"
version = "0.1.0"
description = "Cristian Cardellino Blog"
readme = "README.md"
authors = [
    { name = "Cristian Cardellino", email = "crscardellino@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duty>=1.9.0",
    "minchin-pelican-plugins-summary>=1.3.1",
    "pelican-neighbors>=1.2.0",
    "pelican-sitemap>=1.2.2",
    "pelican-tag-cloud>=1.0.1",
    "pelican-yaml-metadata>=2.1.2",
    "pelican[markdown]>=4.12.0",
    "pymdown-extensions>=10.21.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]


[tool.ruff]
extend-exclude = [
  "__pycache__/",
  ".*env/",
  "*env/",
  "*test.py",
  "*test.ipynb",
  "./flaskblog/fedex_tool/",
  "./migrations/",
]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
